--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,11 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.demo.aspectj">
 
     <application
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@android:mipmap/sym_def_app_icon"
         android:label="AspectjDemo"
-        android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
-        tools:ignore="GoogleAppIndexingWarning">
+        android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
