--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,12 @@
 buildscript {
+    ext.aspectj_version = '1.9.6'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
-        classpath 'org.aspectj:aspectjtools:1.9.5'
+        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath "org.aspectj:aspectjtools:$aspectj_version"
     }
 }
 
